## Makefile.am for DirectFB-examples/data/df_neo

examplesdatadir = $(DATADIR)

if DF_NEO
examplesdata_DATA =		\
	apple-red.png		\
	background.jpg		\
	gnome-applets.png	\
	gnome-calendar.png	\
	gnome-foot.png		\
	gnome-gimp.png		\
	gnome-gmush.png		\
	gnome-gsame.png		\
	gnu-keys.png
else
if DF_INPUT
examplesdata_DATA = gnu-keys.png
else
examplesdata_DATA =
endif
endif

EXTRA_DIST =			\
	apple-red.png		\
	background.jpg		\
	gnome-applets.png	\
	gnome-calendar.png	\
	gnome-foot.png		\
	gnome-gimp.png		\
	gnome-gmush.png		\
	gnome-gsame.png		\
	gnu-keys.png
